--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.yammer</groupId>
-    <artifactId>dropwizard-demo</artifactId>
+    <artifactId>monitoring_node</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
