porukica radi i Coni

--- a/src/main/resources/node_config.properties
+++ b/src/main/resources/node_config.properties
@@ -2,5 +2,5 @@ name = monitoring_node1
 location = balcony
 ip_addr = ip
 description = Node used for monitoring devices
-connectors = temp_sensor, co2_sensor
+connectors = sensor_temp, sensor_co2
 meta = meta
