--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,21 @@
             <artifactId>mqtt-client</artifactId>
             <version>1.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.drools</groupId>
+            <artifactId>drools-core</artifactId>
+            <version>7.7.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.drools</groupId>
+            <artifactId>drools-compiler</artifactId>
+            <version>7.7.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kie</groupId>
+            <artifactId>kie-api</artifactId>
+            <version>7.7.0.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
